# mqjam2024

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
docs/: FLAGS.md  INCLUDE_GRAPH.md  README.md
main/: CMakeLists.txt  Makefile  build.sh  main.c  main.code-workspace  mainmenu.c
main/src/: SpriteLibrary.c  SpriteLibrary.h  base.c  base.h  camera.c  camera.h  deathmenu.c  deathmenu.h  healthbar.c  healthbar.h  mainmenu.c  mainmenu.h  menu.h  misc.c  misc_util.c  obj_pool.c  obj_pool.h  obj_register.c  obj_register.h  palette_lib.c  settings.h  sound.h  sprite.c  texturemanager.c  texturemanager.h  timer.c
main/src/objs/: Object_Example.c  asteroid.c  asteroid.h  background.c  background_dustart.c  background_dustart.h  background_spritefield.c  background_spritefield.h  background_spritelibrary.c  background_sprites.c  background_starfield.c  background_starfield.h  background_stars.c  deathManager.c  gameManager.c  particle.c  planet.c  planet_body.c  planet_body.h  player.c  player.h  restartManager.c  shield.c  shield.h  star.c  star.h  textobj.c  textobj.h  titlemanager.c  winManager.c  wormhole.c
src/: SpriteLibrary.c  base.h  misc_util.h  obj_pool.c  palette_lib.h  sound_manager.c  sound_manager.h  sprite.c  sprite.h  texturemanager.c
src/objs/: asteroid.c  asteroid.h  background_spritefield.h  background_starfield.c  background_starfield.h  gameManager.c  particle.c  particle.h  planet_body.c  shield.c  star.c  star.h  titlemanager.c
